# LipiTk

./: .gitignore  CMakeLists.txt  Doxyfile  global.cmake  global.mk  global.winmk  readme.txt
CMake/: LTKConfig.h.in  LipiTkConfig.cmake.in  binary_common.cmake  cmake_uninstall.cmake  export.cmake  global.cmake  install_headers.cmake  install_targets.cmake  shared_lib_common.cmake  static_lib_common.cmake
lib/: .keepme  readme.txt
package/: package.cfg
projects/: lipiengine.cfg
projects/boxfld_numerals/config/: project.cfg
projects/boxfld_numerals/config/pointfloat_nn/: boxfld.cfg  profile.cfg
projects/numerals/config/: project.cfg
projects/numerals/config/l7_activedtw/: activedtw.mdt
projects/numerals/config/npen_neuralnet/: neuralnet.mdt
projects/numerals/config/pointfloat_nn/: nn.mdt
projects/numerals/config/substroke_nn/: nn.mdt
projects/numerals/data/: English Numerals.txt  headerInfoFile.txt  numerals_testlist.txt  numerals_testlist_mapfile.txt  numerals_trainlist1.txt  numerals_trainlist_mapfile.txt
projects/numerals/data/raw/usr0/: 000000t01.txt  000000t02.txt  000001t01.txt  000001t02.txt  000002t01.txt  000002t02.txt  000003t01.txt  000003t02.txt  000004t01.txt  000004t02.txt  000005t01.txt  000005t02.txt  000006t01.txt  000006t02.txt  000007t01.txt  000007t02.txt  000008t01.txt  000008t02.txt  000009t01.txt  000009t02.txt
projects/numerals/data/raw/usr1/: 000000t01.txt  000000t02.txt  000001t01.txt  000001t02.txt  000002t01.txt  000002t02.txt  000003t01.txt  000003t02.txt  000004t01.txt  000004t02.txt  000005t01.txt  000005t02.txt  000006t01.txt  000006t02.txt  000007t01.txt  000007t02.txt  000008t01.txt  000008t02.txt  000009t01.txt  000009t02.txt
projects/numerals/data/raw/usr2/: 000000t01.txt  000000t02.txt  000001t01.txt  000001t02.txt  000002t01.txt  000002t02.txt  000003t01.txt  000003t02.txt  000004t01.txt  000004t02.txt  000005t01.txt  000005t02.txt  000006t01.txt  000006t02.txt  000007t01.txt  000007t02.txt  000008t01.txt  000008t02.txt  000009t01.txt  000009t02.txt
projects/numerals/data/raw/usr3/: 000000t01.txt  000000t02.txt  000001t01.txt  000001t02.txt  000002t01.txt  000002t02.txt  000003t01.txt  000003t02.txt  000004t01.txt  000004t02.txt  000005t01.txt  000005t02.txt  000006t01.txt  000006t02.txt  000007t01.txt  000007t02.txt  000008t01.txt  000008t02.txt  000009t01.txt  000009t02.txt
projects/numerals/data/raw/usr4/: 000000t01.txt  000000t02.txt  000001t01.txt  000001t02.txt  000002t01.txt  000002t02.txt  000003t01.txt  000003t02.txt  000004t01.txt  000004t02.txt  000005t01.txt  000005t02.txt  000006t01.txt  000006t02.txt  000007t01.txt  000007t02.txt  000008t01.txt  000008t02.txt  000009t01.txt  (+1 more)
scripts/: benchmark.pl  benchmarkadapt.pl  eval.pl  evaladapt.pl  extracthwdata.pl  genmake.pl  imagewriter.pl  lipitk.css  listfiles.pl  package.pl  resultviewer.html  trimlines.pl
src/: CMakeLists.txt
src/apps/samples/: CMakeLists.txt
src/apps/samples/shaperectst/: CMakeLists.txt  shaperectst.cpp  shaperectst.h
src/apps/samples/wordrectst/: CMakeLists.txt  wordrectst.cpp  wordrectst.h
src/common/: CMakeLists.txt  LTKScreenContext.cpp  LTKTrace.cpp
src/include/: LTKInc.h  LTKLipiEngineInterface.h  LTKMacros.h
src/lib/: readme.txt
src/lipiengine/: CMakeLists.txt  LipiEngineModule.cpp  LipiEngineModule.h  version.h
src/reco/: CMakeLists.txt
src/reco/shaperec/: CMakeLists.txt
src/reco/shaperec/activedtw/: ActiveDTWAdapt.cpp  ActiveDTWShapeRecognizer.cpp  ActiveDTWShapeRecognizer.h  CMakeLists.txt
src/reco/shaperec/common/: CMakeLists.txt  LTKShapeRecoConfig.cpp  LTKShapeRecoResult.cpp  LTKShapeRecoUtil.cpp
src/reco/shaperec/featureextractor/: CMakeLists.txt
src/reco/shaperec/featureextractor/common/: CMakeLists.txt  LTKShapeFeature.h  LTKShapeFeatureExtractorFactory.cpp
src/reco/shaperec/featureextractor/l7/: CMakeLists.txt  L7ShapeFeature.cpp  L7ShapeFeature.h
src/reco/shaperec/featureextractor/npen/: CMakeLists.txt  NPenShapeFeature.cpp  NPenShapeFeature.h  NPenShapeFeatureExtractor.cpp
src/reco/shaperec/featureextractor/pointfloat/: CMakeLists.txt  PointFloatShapeFeatureExtractor.h
src/reco/shaperec/featureextractor/substroke/: CMakeLists.txt  SubStrokeShapeFeature.cpp  SubStrokeShapeFeature.h  SubStrokeShapeFeatureExtractor.cpp
src/reco/shaperec/featureextractor/substroke/linux/: Makefile.linux
src/reco/shaperec/neuralnet/: CMakeLists.txt  NeuralNet.cpp  NeuralNet.h  NeuralNetShapeRecognizer.cpp  NeuralNetShapeRecognizer.h  neuralnet.cfg
src/reco/shaperec/nn/: CMakeLists.txt  NN.cpp  NN.h  NNAdapt.cpp  NNShapeRecognizer.cpp  NNShapeRecognizer.h
src/reco/shaperec/preprocessing/: CMakeLists.txt  LTKPreprocessor.cpp
src/reco/wordrec/: CMakeLists.txt
src/reco/wordrec/boxfld/: BoxFieldRecognizer.cpp  BoxFieldRecognizer.h  CMakeLists.txt  boxfld.cpp  boxfld.h
src/reco/wordrec/common/: CMakeLists.txt  LTKRecognitionContext.cpp  LTKWordRecoConfig.cpp  LTKWordRecoResult.cpp
src/reco/wordrec/linux/: Makefile.linux
src/util/: CMakeLists.txt
src/util/featurefilewriter/: CMakeLists.txt  featurefilewriter.cpp  featurefilewriter.h  main.cpp
src/util/featurefilewriter/linux/: Makefile.linux
src/util/imgwriter/: CMakeLists.txt  Inc.h  dirent.h  main.cpp
src/util/imgwriter/linux/: Makefile.linux
src/util/lib/: CMakeLists.txt  LTKCheckSumGenerate.cpp  LTKCheckSumGenerate.h  LTKConfigFileReader.cpp  LTKDynamicTimeWarping.h  LTKErrors.h  LTKHierarchicalClustering.h  LTKImageWriter.cpp  LTKImageWriter.h  LTKInkFileReader.cpp  LTKInkFileReader.h  LTKInkFileWriter.cpp  LTKInkUtils.cpp  LTKLinuxUtil.cpp  LTKLoggerUtil.cpp  LTKLoggerUtil.h  LTKStrEncoding.cpp  LTKStringUtil.cpp
src/util/logger/: CMakeLists.txt  logger.cpp
src/util/mdv/: CMakeLists.txt  mdv.cpp  mdv.h
src/util/mdv/linux/: Makefile.linux
src/util/run/: CMakeLists.txt
src/util/run/runshaperec/: CMakeLists.txt  RunShaperec.cpp  RunShaperec.h
src/util/run/runshaperec/linux/: Makefile.linux
src/util/run/runwordrec/: CMakeLists.txt  RunWordrec.cpp  RunWordrec.h
src/util/run/runwordrec/linux/: Makefile.linux
(+58 files in other folders)
